--- a/src/view/Styles/Containers/About.css
+++ b/src/view/Styles/Containers/About.css
@@ -38,7 +38,7 @@
 }
 @media (max-width:900px){
  .about-section{
-  padding: 0;
+  padding:100px 0;
  }
  .about-section{
   flex-direction: column;
